# he-lang-macro

./: .gitignore  README.md  build.sh
example-he-langs/: add.he  add1.he  add_any.he  multiply.he  recursive.he  remake.he  simple_macro.he  sub1.he  unquote.he
he_lang_macro/: Cargo.toml
he_lang_macro/src/: escape.rs  eval.rs  executor.rs  io.rs  lexer.rs  list.rs  log.rs  main.rs  parser.rs  scope.rs  test_examples.rs  types.rs
he_lang_macro/src/utils/: he_lang_macro.pest  log_config.yaml  log_config_debug.yaml
he_lang_macro/tests/: predefined_test.rs
he_lang_macro/utils/: he_lang_macro.pest
