[package]
name = "he_lang_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = {version = "0.12"}
strum_macros = {version = "0.24"}
pest = {version = "*"}
pest_derive = {version = "*"}
ansi_term = {version = "*"}
log4rs = {version = "1.1"}