[package]
name = "he-lang"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = {version = "0.12"}
strum_macros = {version = "0.24"}
pest = {version = "*"}
pest_derive = {version = "*"}
ansi_term = {version = "*"}
log4rs = {version = "1.1"}
regex = {version = "1"}
once_cell = {version = "1"}
log = {version = "*"}
serde_yaml = {version = "*"}
clap = {version = "*", features = ["derive"]}
console = {version = "*"}

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3